k8s/manifests/rag/qdrant/kustomize/base/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dify-oss-ingress
  namespace: mlops
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "250m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dify.cnapcloud.com
    secretName: dify-cnapcloud-tls
  rules:
  - host: dify.cnapcloud.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dify-api-svc
            port:
              number: 5001
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: dify-api-svc
            port:
              number: 5001
      - path: /console/api
        pathType: Prefix
        backend:
          service:
            name: dify-api-svc
            port:
              number: 5001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dify-web-svc
            port:
              number: 3000
